[package]
name = "pulld"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
crossterm = "0.29.0"
gethostname = "1.1.0"
git2 = "0.20.2"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
shell-escape = "0.1.5"
signal-hook = "0.3.18"
ureq = { version = "3.1.4", features = ["json"] }
